slight change in 3_crew.ipynb

--- a/3_crew.ipynb
+++ b/3_crew.ipynb
@@ -550,6 +550,16 @@
     ")\n",
     "crew.kickoff(inputs={\"topic\":\"The future of electric vehicles\"})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5cdcf087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#problem here is that we don't have the readymade internet data. "
+   ]
   }
  ],
  "metadata": {
